Set eureka.instance.hostname to 'service-registry'

--- a/application.yml
+++ b/application.yml
@@ -5,4 +5,4 @@ eureka:
         service-url:
             defaultZone: http://service-registry:8761/eureka/
     instance:
-        hostname: localhost 
+        hostname: service-registry 
